--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 }
 .container {
   width: 90%;
+  max-width: 730px;
   margin: 1em auto;
   height: 95vh;
 }
@@ -113,4 +114,82 @@
 .count p {
   color: rgb(98, 104, 116);
   font-size: 14px;
+}
+
+
+@media(min-width: 730px) {
+  .App {
+    background-color: rgb(249, 250, 254);
+    padding: 2em 0;
+  }
+  .container {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 5px 8px 12px #eee;
+    height: 90vh;
+    padding: 1em 2em;
+  }
+  
+/* Notification Component */
+.notification {
+  width: 90%;
+  margin: auto;
+  padding: 0 1em;
+}
+
+.unread {
+  background: hsl(210, 70%, 97%);
+  margin: auto;
+  padding: 0 1em;
+  width: 90%;
+}
+
+.notification-row > div:nth-child(1) {
+  width: 12%; 
+}
+.notification-row > div:nth-child(2) {
+  width: 100%;
+}
+
+.notification-row img {
+  width: 50px;
+}
+
+.notification-row .game {
+  color: rgb(19, 45, 94);
+}
+
+.message  {
+  width: 80%;
+  margin: 0px 0px 1em 4em;
+}
+.message p {
+  color: rgb(188, 189, 195);
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 20px;
+}
+
+
+/* NotificationCount component */
+.count {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: .5em auto 1.5em auto;
+  width: 93%;
+}
+
+.count span {
+  border: none;
+  border-radius: 5px;
+  padding: .1em .5em;
+  background-color: hsl(219, 85%, 26%);
+  color: #fff;
+}
+
+.count p {
+  color: rgb(98, 104, 116);
+  font-size: 14px;
+}
 }
