--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 
 .App {
   text-align: center;
-  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   min-height: 100vh;
 }
 .container {
@@ -51,8 +51,10 @@
 .notification-row img {
   width: 40px;
 }
-
-.notification-row .text { 
+.notification-row .name {
+  color: rgb(36, 41, 47);
+}
+.notification-row .text {
   font-weight: 500;
   font-size: 1rem;
   color: rgb(94, 98, 107);
@@ -77,15 +79,15 @@
   width: 8px;
   height: 8px;
   border-radius: 10px;
-  margin-left: .5em;
+  margin-left: 0.5em;
 }
 
-.message  {
+.message {
   border: 1px solid #eee;
   border-radius: 5px;
   width: 70%;
   margin: 0 auto 1em auto;
-  padding: .5em;
+  padding: 0.5em;
 }
 .message p {
   color: rgb(99, 100, 104);
@@ -93,7 +95,6 @@
   font-size: 15px;
   line-height: 20px;
 }
-
 
 /* NotificationCount component */
 .count {
@@ -106,7 +107,7 @@
 .count span {
   border: none;
   border-radius: 5px;
-  padding: .1em .5em;
+  padding: 0.1em 0.5em;
   background-color: hsl(219, 85%, 26%);
   color: #fff;
 }
@@ -116,8 +117,7 @@
   font-size: 14px;
 }
 
-
-@media(min-width: 730px) {
+@media (min-width: 730px) {
   .App {
     background-color: rgb(249, 250, 254);
     padding: 2em 0;
@@ -127,69 +127,92 @@
     border-radius: 10px;
     box-shadow: 5px 8px 12px #eee;
     height: 90vh;
-    padding: 1em 2em;
+    padding: 1em;
   }
-  
-/* Notification Component */
-.notification {
-  width: 90%;
-  margin: auto;
-  padding: 0 1em;
-}
 
-.unread {
-  background: hsl(210, 70%, 97%);
-  margin: auto;
-  padding: 0 1em;
-  width: 90%;
-}
+  /* Notification Component */
+  .notification {
+    width: 90%;
+    margin: auto;
+    padding: 0 1em;
+  }
 
-.notification-row > div:nth-child(1) {
-  width: 12%; 
-}
-.notification-row > div:nth-child(2) {
-  width: 100%;
-}
+  .unread {
+    background: hsl(210, 70%, 97%);
+    margin: auto;
+    padding: 0 1em;
+    width: 90%;
+  }
 
-.notification-row img {
-  width: 50px;
-}
+  .notification-row > div:nth-child(1) {
+    width: 12%;
+  }
+  .notification-row > div:nth-child(2) {
+    width: 100%;
+  }
 
-.notification-row .game {
-  color: rgb(19, 45, 94);
-}
+  .notification-row img {
+    width: 50px;
+  }
 
-.message  {
-  width: 80%;
-  margin: 0px 0px 1em 4em;
-}
-.message p {
-  color: rgb(188, 189, 195);
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 20px;
-}
+  .notification-row .name:hover {
+    cursor: pointer;
+    color: rgb(19, 45, 94);
+  }
 
+  .notification-row .activity-post:hover {
+    cursor: pointer;
+    color: rgb(19, 45, 94);
+  }
 
-/* NotificationCount component */
-.count {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: .5em auto 1.5em auto;
-  width: 93%;
-}
+  .notification-row .game {
+    color: rgb(19, 45, 94);
+  }
+  .notification-row .game:hover {
+    cursor: pointer;
+  }
 
-.count span {
-  border: none;
-  border-radius: 5px;
-  padding: .1em .5em;
-  background-color: hsl(219, 85%, 26%);
-  color: #fff;
-}
+  .message {
+    width: 80%;
+    margin: 0px 0px 1em 4em;
+    transition: all 0.2s ease;
+  }
+  .message:hover {
+    background-color: rgb(229, 239, 249);
+    cursor: pointer;
+  }
+  .message p {
+    color: rgb(188, 189, 195);
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 20px;
+  }
+  .picture-chess:hover {
+    cursor: pointer;
+  }
 
-.count p {
-  color: rgb(98, 104, 116);
-  font-size: 14px;
-}
+  /* NotificationCount component */
+  .count {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0.5em auto 1.5em auto;
+    width: 93%;
+  }
+
+  .count span {
+    border: none;
+    border-radius: 5px;
+    padding: 0.1em 0.5em;
+    background-color: hsl(219, 85%, 26%);
+    color: #fff;
+  }
+
+  .count p {
+    color: rgb(98, 104, 116);
+    font-size: 14px;
+  }
+  .count p:hover {
+    cursor: pointer;
+  }
 }
